deploy: 30e757335a19231730e3ffeac8add06749c5fc23

--- a/classes/_local_main_.services.addoninstaller.html
+++ b/classes/_local_main_.services.addoninstaller.html
@@ -91,12 +91,10 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#cleanuptmpfiles" class="tsd-kind-icon">cleanup<wbr>Tmp<wbr>Files</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#clearaddonstatus" class="tsd-kind-icon">clear<wbr>Addon<wbr>Status</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#disableaddon" class="tsd-kind-icon">disable<wbr>Addon</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#downloadaddon" class="tsd-kind-icon">download<wbr>Addon</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#downloadandextractaddon" class="tsd-kind-icon">download<wbr>And<wbr>Extract<wbr>Addon</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#enableaddon" class="tsd-kind-icon">enable<wbr>Addon</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#extractaddon" class="tsd-kind-icon">extract<wbr>Addon</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#getaddonname" class="tsd-kind-icon">get<wbr>Addon<wbr>Name</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#installaddon" class="tsd-kind-icon">install<wbr>Addon</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.addoninstaller.html#installfromdisk" class="tsd-kind-icon">install<wbr>From<wbr>Disk</a></li>
@@ -125,7 +123,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L850">main.d.ts:850</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L850">main.d.ts:850</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
@@ -136,40 +134,6 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="cleanuptmpfiles" class="tsd-anchor"></a>
-					<h3>cleanup<wbr>Tmp<wbr>Files</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">cleanup<wbr>Tmp<wbr>Files<span class="tsd-signature-symbol">(</span>__namedParameters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{ </span>addonTmpDir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>archivePath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>systemTmpDir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L880">main.d.ts:880</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>__namedParameters: <span class="tsd-signature-symbol">{ </span>addonTmpDir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>archivePath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>systemTmpDir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></h5>
-									<ul class="tsd-parameters">
-										<li class="tsd-parameter">
-											<h5>addon<wbr>Tmp<wbr>Dir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
-										</li>
-										<li class="tsd-parameter">
-											<h5>archive<wbr>Path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
-										</li>
-										<li class="tsd-parameter">
-											<h5>system<wbr>Tmp<wbr>Dir<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="clearaddonstatus" class="tsd-anchor"></a>
 					<h3>clear<wbr>Addon<wbr>Status</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -179,7 +143,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L870">main.d.ts:870</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L870">main.d.ts:870</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -202,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L862">main.d.ts:862</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L862">main.d.ts:862</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -216,16 +180,16 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="downloadaddon" class="tsd-anchor"></a>
-					<h3>download<wbr>Addon</h3>
+					<a name="downloadandextractaddon" class="tsd-anchor"></a>
+					<h3>download<wbr>And<wbr>Extract<wbr>Addon</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">download<wbr>Addon<span class="tsd-signature-symbol">(</span>addon<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span>, release<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">download<wbr>And<wbr>Extract<wbr>Addon<span class="tsd-signature-symbol">(</span>addon<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span>, release<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span>, update<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L876">main.d.ts:876</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L876">main.d.ts:876</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -235,6 +199,9 @@
 								</li>
 								<li>
 									<h5>release: <span class="tsd-signature-type">any</span></h5>
+								</li>
+								<li>
+									<h5>update: <span class="tsd-signature-type">boolean</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -251,7 +218,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L860">main.d.ts:860</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L860">main.d.ts:860</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -265,32 +232,6 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="extractaddon" class="tsd-anchor"></a>
-					<h3>extract<wbr>Addon</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">extract<wbr>Addon<span class="tsd-signature-symbol">(</span>archivePath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span>, update<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L886">main.d.ts:886</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>archivePath: <span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> update: <span class="tsd-signature-type">boolean</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="getaddonname" class="tsd-anchor"></a>
 					<h3>get<wbr>Addon<wbr>Name</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -300,7 +241,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L854">main.d.ts:854</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L854">main.d.ts:854</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -323,7 +264,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L872">main.d.ts:872</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L872">main.d.ts:872</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -349,7 +290,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L878">main.d.ts:878</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L878">main.d.ts:878</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -372,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L852">main.d.ts:852</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L852">main.d.ts:852</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -389,7 +330,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L888">main.d.ts:888</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L880">main.d.ts:880</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -406,7 +347,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L858">main.d.ts:858</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L858">main.d.ts:858</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -432,7 +373,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L868">main.d.ts:868</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L868">main.d.ts:868</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -458,7 +399,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L856">main.d.ts:856</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L856">main.d.ts:856</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -481,7 +422,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L866">main.d.ts:866</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L866">main.d.ts:866</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -504,7 +445,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L864">main.d.ts:864</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L864">main.d.ts:864</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -527,7 +468,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/main.d.ts#L874">main.d.ts:874</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/main.d.ts#L874">main.d.ts:874</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -564,22 +505,16 @@
 								<a href="_local_main_.services.addoninstaller.html#addonspath" class="tsd-kind-icon">addons<wbr>Path</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.addoninstaller.html#cleanuptmpfiles" class="tsd-kind-icon">cleanup<wbr>Tmp<wbr>Files</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.addoninstaller.html#clearaddonstatus" class="tsd-kind-icon">clear<wbr>Addon<wbr>Status</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.addoninstaller.html#disableaddon" class="tsd-kind-icon">disable<wbr>Addon</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.addoninstaller.html#downloadaddon" class="tsd-kind-icon">download<wbr>Addon</a>
+								<a href="_local_main_.services.addoninstaller.html#downloadandextractaddon" class="tsd-kind-icon">download<wbr>And<wbr>Extract<wbr>Addon</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.addoninstaller.html#enableaddon" class="tsd-kind-icon">enable<wbr>Addon</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_local_main_.services.addoninstaller.html#extractaddon" class="tsd-kind-icon">extract<wbr>Addon</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.addoninstaller.html#getaddonname" class="tsd-kind-icon">get<wbr>Addon<wbr>Name</a>
