--- a/interfaces/_local_.siteorganization.html
+++ b/interfaces/_local_.siteorganization.html
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Starred<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L250">index.d.ts:250</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L250">index.d.ts:250</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>siteLastStartedTimestamp<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L251">index.d.ts:251</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L251">index.d.ts:251</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -169,6 +169,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
