--- a/enums/_local_.siteservicerole.html
+++ b/enums/_local_.siteservicerole.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">DATABASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;db&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L24">index.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L24">index.d.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L23">index.d.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L23">index.d.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">PHP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;php&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L25">index.d.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L25">index.d.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,6 +179,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
