--- a/enums/_local_.siteservicetype.html
+++ b/enums/_local_.siteservicetype.html
@@ -88,7 +88,7 @@
 					<div class="tsd-signature tsd-kind-icon">LIGHTNING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;lightning&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L19">index.d.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L19">index.d.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,6 +151,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
