--- a/interfaces/_local_.releaselist.html
+++ b/interfaces/_local_.releaselist.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ReleaseManifest | @getflywheel/local</title>
+	<title>ReleaseList | @getflywheel/local</title>
 	<meta name="description" content="Documentation for @getflywheel/local">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/_local_.html">&quot;local&quot;</a>
 				</li>
 				<li>
-					<a href="_local_.releasemanifest.html">ReleaseManifest</a>
+					<a href="_local_.releaselist.html">ReleaseList</a>
 				</li>
 			</ul>
-			<h1>Interface ReleaseManifest</h1>
+			<h1>Interface ReleaseList</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Local reads from this file to learn about a new Local release.</p>
+						<p>Local reads this data from the Local Releases CMS.</p>
 					</div>
 				</div>
 			</section>
@@ -78,7 +78,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ReleaseManifest</span>
+						<span class="target">ReleaseList</span>
 					</li>
 				</ul>
 			</section>
@@ -89,15 +89,13 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#changelogurl" class="tsd-kind-icon">changelog<wbr>Url</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#notes" class="tsd-kind-icon">notes</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#pub_date" class="tsd-kind-icon">pub_<wbr>date</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#releasenotesurl" class="tsd-kind-icon">release<wbr>Notes<wbr>Url</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#rollout" class="tsd-kind-icon">rollout</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#size" class="tsd-kind-icon">size</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#url" class="tsd-kind-icon">url</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releasemanifest.html#version" class="tsd-kind-icon">version</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#body" class="tsd-kind-icon">body</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#build_number" class="tsd-kind-icon">build_<wbr>number</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#download_links" class="tsd-kind-icon">download_<wbr>links</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#pub_date" class="tsd-kind-icon">pub_<wbr>date</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#release_channel" class="tsd-kind-icon">release_<wbr>channel</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.releaselist.html#version" class="tsd-kind-icon">version</a></li>
 							</ul>
 						</section>
 					</div>
@@ -106,17 +104,47 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="changelogurl" class="tsd-anchor"></a>
-					<h3>changelog<wbr>Url</h3>
-					<div class="tsd-signature tsd-kind-icon">changelog<wbr>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="body" class="tsd-anchor"></a>
+					<h3>body</h3>
+					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L322">index.d.ts:322</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L381">index.d.ts:381</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>A link to the public changelog for this release.</p>
+							<p>The release notes for this release.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="build_number" class="tsd-anchor"></a>
+					<h3>build_<wbr>number</h3>
+					<div class="tsd-signature tsd-kind-icon">build_<wbr>number<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L365">index.d.ts:365</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Build number from the build pipeline.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="download_links" class="tsd-anchor"></a>
+					<h3>download_<wbr>links</h3>
+					<div class="tsd-signature tsd-kind-icon">download_<wbr>links<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L377">index.d.ts:377</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Text area containing the download links for each operating system.</p>
 						</div>
 					</div>
 				</section>
@@ -126,27 +154,12 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L307">index.d.ts:307</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L357">index.d.ts:357</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>SemVer compatible Local version.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="notes" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> notes</h3>
-					<div class="tsd-signature tsd-kind-icon">notes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L317">index.d.ts:317</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Hand written notes about the release.</p>
+							<p>Name of the Local release, e.g. &quot;Local 5.5.5&quot;.</p>
 						</div>
 					</div>
 				</section>
@@ -156,82 +169,42 @@
 					<div class="tsd-signature tsd-kind-icon">pub_<wbr>date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L332">index.d.ts:332</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L373">index.d.ts:373</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>The publish date for this release formatted as an ISO 8601 string.</p>
+							<p>Publish date of the release.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="releasenotesurl" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> release<wbr>Notes<wbr>Url</h3>
-					<div class="tsd-signature tsd-kind-icon">release<wbr>Notes<wbr>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="release_channel" class="tsd-anchor"></a>
+					<h3>release_<wbr>channel</h3>
+					<div class="tsd-signature tsd-kind-icon">release_<wbr>channel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L327">index.d.ts:327</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L369">index.d.ts:369</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>URL to hosted notes about this specific Local release. This page will be embedded into Local using an iframe.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="rollout" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> rollout</h3>
-					<div class="tsd-signature tsd-kind-icon">rollout<span class="tsd-signature-symbol">:</span> <a href="_local_.rolloutrules.html" class="tsd-signature-type">RolloutRules</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L339">index.d.ts:339</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="size" class="tsd-anchor"></a>
-					<h3>size</h3>
-					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L337">index.d.ts:337</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Size in bytes of the Local update.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="url" class="tsd-anchor"></a>
-					<h3>url</h3>
-					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L302">index.d.ts:302</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>URL for the Local release zip.</p>
+							<p>&quot;stable&quot; or &quot;beta&quot;</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="version" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> version</h3>
+					<h3>version</h3>
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L312">index.d.ts:312</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L361">index.d.ts:361</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>SemVer compatible Local version.</p>
+							<p>Local version.</p>
 						</div>
 					</div>
 				</section>
@@ -286,45 +259,39 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-module">
-						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
+						<a href="_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#changelogurl" class="tsd-kind-icon">changelog<wbr>Url</a>
+								<a href="_local_.releaselist.html#body" class="tsd-kind-icon">body</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#name" class="tsd-kind-icon">name</a>
+								<a href="_local_.releaselist.html#build_number" class="tsd-kind-icon">build_<wbr>number</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#notes" class="tsd-kind-icon">notes</a>
+								<a href="_local_.releaselist.html#download_links" class="tsd-kind-icon">download_<wbr>links</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#pub_date" class="tsd-kind-icon">pub_<wbr>date</a>
+								<a href="_local_.releaselist.html#name" class="tsd-kind-icon">name</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#releasenotesurl" class="tsd-kind-icon">release<wbr>Notes<wbr>Url</a>
+								<a href="_local_.releaselist.html#pub_date" class="tsd-kind-icon">pub_<wbr>date</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#rollout" class="tsd-kind-icon">rollout</a>
+								<a href="_local_.releaselist.html#release_channel" class="tsd-kind-icon">release_<wbr>channel</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#size" class="tsd-kind-icon">size</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#url" class="tsd-kind-icon">url</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_local_.releasemanifest.html#version" class="tsd-kind-icon">version</a>
+								<a href="_local_.releaselist.html#version" class="tsd-kind-icon">version</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
+					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
 					</li>
