--- a/interfaces/_local_.rolloutrules.html
+++ b/interfaces/_local_.rolloutrules.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">auto<wbr>Update<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#autoupdateenabled" class="tsd-signature-type">AutoupdateEnabled</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L346">index.d.ts:346</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L347">index.d.ts:347</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">rollout<wbr>Percentage<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#rolloutpercentage" class="tsd-signature-type">RolloutPercentage</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ef6d283/index.d.ts#L345">index.d.ts:345</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/30e7573/index.d.ts#L346">index.d.ts:346</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -168,6 +168,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.newsiteinfo.html" class="tsd-kind-icon">New<wbr>Site<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="_local_.releaselist.html" class="tsd-kind-icon">Release<wbr>List</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
